Added get requested state and extra instruments to example

--- a/examples/SPIFFS_hz_control/data/index.html
+++ b/examples/SPIFFS_hz_control/data/index.html
@@ -38,6 +38,22 @@
                 <div class="arrow plus"></div>
             </div>
         </div>
+		<div>
+			<h3>Params</h3>
+			<ul>
+				<li>Supply voltage: %%SUP_VOLTAGE%%V</li>
+				<li>Min Hz: %%ACT_MIN_HZ%%Hz</li>
+				<li>Max Hz: %%ACT_MAX_HZ%%Hz</li>
+				<li>Requested Hz: %%ACT_REQ_HZ%%Hz</li>
+				<li>Current Hz: %%ACT_HZ%%Hz</li>
+				<li>Glow plug current: %%GP_CURRENT%%A</li>
+				<li>Glow plug voltage: %%GP_VOLTAGE%%V</li>
+				<li>Min fan speed: %%ACT_MAX_RPM%%RPM</li>
+				<li>Max fan speed: %%ACT_MIN_RPM%%RPM</li>
+				<li>Current fan speed: %%FAN_SPEED%%RPM</li>
+				<li>Fan voltage: %%FAN_VOLTAGE%%V</li>
+			</ul>
+		</div>
     </main>
     <div id="heater_vars">
         <input type="hidden" id="max_hz" value="%%MAX_HZ%%">
